--- a/Frontend_Side/package.json
+++ b/Frontend_Side/package.json
@@ -39,6 +39,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "author": "Shubham",
+  "author": "Sarvik",
   "license": "ISC"
 }
