--- a/Frontend_Side/src/utils/package.json
+++ b/Frontend_Side/src/utils/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Shubham",
+  "author": "Sarvik",
   "license": "ISC"
 }
